force-app/main/default/objects/Campaign_To_Opportunity_Field_Mapping__mdt/Campaign_To_Opportunity_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type contains the field mappings and hardcoded values when an opportunity gets created from customer&apos;s response to a campaign</description>
    <label>Campaign To Opportunity Field Mapping</label>
    <pluralLabel>Campaign To Opportunity Field Mappings</pluralLabel>
</CustomObject>