force-app/main/default/objects/Campaign_To_Opportunity_Field_Mapping__mdt/fields/Field_value__c.field-meta.xml
<CustomField>
    <fullName>Field_value__c</fullName>
    <description>The value to be mapped to &apos;Opportunity field&apos; field while creating an opportunity from campaign on customer&apos;s response</description>
    <inlineHelpText>The value to be mapped to &apos;Opportunity field&apos; field while creating an opportunity from campaign on customer&apos;s response</inlineHelpText>
    <label>Field value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>