force-app/main/default/objects/Campaign_To_Opportunity_Field_Mapping__mdt/fields/Opportunity_field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_field__c</fullName>
    <description>Opportunity field API name which will be mapped during opportunity creation from campaign on customer&apos;s response</description>
    <inlineHelpText>Opportunity field API name which will be mapped during opportunity creation from campaign on customer&apos;s response</inlineHelpText>
    <label>Opportunity field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>