force-app/main/default/objects/Campaign_To_Opportunity_Field_Mapping__mdt/fields/Opportunity_field_Data_type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_field_Data_type__c</fullName>
    <description>Data type of opportunity field to avoid exceptions during field value mapping</description>
    <inlineHelpText>Data type of opportunity field to avoid exceptions during field value mapping</inlineHelpText>
    <label>Opportunity field Data type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>