force-app/main/default/objects/Campaign_To_Opportunity_Field_Mapping__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_value__c</columns>
    <columns>Opportunity_field__c</columns>
    <columns>Opportunity_field_Data_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>